atualização da cor

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Atividades JN</title>
     <script type="text/javascript" src="scripts/hello-world.js"></script>
@@ -7,9 +8,19 @@
     <script type="text/javascript" src="scripts/operaçoes-basicas.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <button onclick="HelloWorld()">Hello World!</button>
-    <button onclick="HelloUser()">Hello User</button>
-    <button onclick="OperacoesBasicas()">Operações Básicas</button>
+
+
+    <h1>Atividades</h1>
+    <div>
+        <button onclick="HelloWorld()">Hello World!</button>
+        <button onclick="HelloUser()">Hello User</button>
+        <button onclick="OperacoesBasicas()">Operações Básicas</button>
+
+    </div>
+
+
 </body>
+
 </html>
